objects/Class__c.object
<CustomObject>
    <fields>
        <fullName>Board__c</fullName>
        <label>Board</label>
        <picklist>
            <picklistValues>
                <fullName>CBSE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rajasthan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bihar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>West Bengal</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Class_Teacher__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Class Teacher</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Classes</relationshipLabel>
        <relationshipName>Classes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Detailed_Description__c</fullName>
        <inlineHelpText>description of the class</inlineHelpText>
        <label>Detailed Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Fees__c</fullName>
        <label>Fees</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Max_Size__c</fullName>
        <inlineHelpText>Maximum size of the class</inlineHelpText>
        <label>Max Size</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>My_Count__c</fullName>
        <inlineHelpText>Number of students currently in the class</inlineHelpText>
        <label>My Count</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Students__c</fullName>
        <label>Number of Students</label>
        <summaryForeignKey>Student__c.Class__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>Class</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Class Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Classes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>